commented out tests

--- a/data-visualization-projects/visualize-data-with-a-treemap-diagram/index.html
+++ b/data-visualization-projects/visualize-data-with-a-treemap-diagram/index.html
@@ -163,7 +163,7 @@
            .style('text-shadow', '5px 5px 10px black');
       });
     </script>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <!-- uncomment to see fcc tests: <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
     <!-- Helped me: https://www.d3-graph-gallery.com/graph/treemap_json.html -->
   </body>
 </html>
